# 3_Fruit_Game

./: .gitignore  CMakeLists.txt  README.md  create_placeholder_files.ps1  fruitcrush.db  main.cpp  项目开发进度.md  项目计划书_水果消消乐.md
animation/: AnimationManager.cpp  AnimationManager.h  GLRenderer.cpp  GLRenderer.h  ParticleSystem.cpp  ParticleSystem.h
animation/effects/: BombEffect.cpp  BombEffect.h  EliminateEffect.cpp  EliminateEffect.h  FallEffect.cpp  FallEffect.h  SwapEffect.cpp  SwapEffect.h
docs/: AnimationArchitecture.md  GameViewCleanupGuide.md  GameViewIntegrationPlan.md  GameViewRefactorPlan.md  GameViewRefactorTODO.md  MouseInteractionDesign.md  MouseInteractionSystemComplete.md  OpenGL渲染使用说明.md  动画系统修复总结.md  动画系统重构说明.md  成就系统总结.md  数据持久化系统说明.md  样式系统说明.md  比赛模式系统说明.md  游戏引擎测试说明.md  游戏循环逻辑重构.md  账户系统总结.md
processingmd/: 渲染与逻辑深度修复.md  环境搭建完成说明.md  问题修复总结.md
resources/styles/: achievement.qss  buttons.qss  game.qss  login.qss  main.qss  scrollbar.qss  settings.qss
resources/textures/textureHandler/: TextureExtractor.cpp  TextureExtractor.h  TextureExtractorTool.cpp  TextureExtractor使用说明.md
src/achievement/: AchievementDef.h  AchievementManager.cpp  AchievementManager.h
src/achievement/detectors/: AchievementDetectorManager.cpp  AchievementDetectorManager.h  BeginnerAchievementDetector.cpp  BeginnerAchievementDetector.h  ChallengeAchievementDetector.cpp  ChallengeAchievementDetector.h  ComboAchievementDetector.cpp  ComboAchievementDetector.h  DetectorFactory.cpp  DetectorFactory.h  IAchievementDetector.h  MilestoneAchievementDetector.cpp  MilestoneAchievementDetector.h  MultiMatchAchievementDetector.cpp  MultiMatchAchievementDetector.h  PropAchievementDetector.cpp  PropAchievementDetector.h  ScoreAchievementDetector.cpp  ScoreAchievementDetector.h  SpecialAchievementDetector.cpp  SpecialAchievementDetector.h
src/core/: AnimationRecorder.cpp  AnimationRecorder.h  FallProcessor.cpp  FallProcessor.h  FruitGenerator.cpp  FruitGenerator.h  FruitTypes.h  GameCycleProcessor.cpp  GameCycleProcessor.h  GameEngine.cpp  GameEngine.h  MapManager.cpp  MapManager.h  MatchDetector.cpp  MatchDetector.h  ScoreCalculator.cpp  ScoreCalculator.h  SpecialEffectProcessor.cpp  SpecialEffectProcessor.h  SpecialFruitGenerator.cpp  SpecialFruitGenerator.h  SwapHandler.cpp  SwapHandler.h
src/data/: Database.cpp  Database.h  RankManager.cpp  RankManager.h  SaveManager.cpp  SaveManager.h
src/mode/: CasualMode.cpp  CasualMode.h  CompetitionMode.cpp  CompetitionMode.h  GameMode.cpp  GameMode.h
src/props/: Clamp.cpp  Clamp.h  Hammer.cpp  Hammer.h  MagicWand.cpp  MagicWand.h  PropManager.cpp  PropManager.h
src/score/: ComboTracker.cpp  ComboTracker.h  PointSystem.cpp  PointSystem.h  ScoreManager.cpp  ScoreManager.h
src/special/: DiamondBomb.cpp  DiamondBomb.h  LineBomb.cpp  LineBomb.h  RainbowFruit.cpp  RainbowFruit.h  SpecialFruit.cpp  SpecialFruit.h
src/utils/: Random.cpp  Random.h
tests/: CMakeList.txt  CMakeLists.txt  test_fall_processor.cpp  test_fruit_generator.cpp  test_game_engine.cpp  test_match_detector.cpp  test_score_calculator.cpp  test_special_effect_processor.cpp  test_special_fruit_generator.cpp
ui/: AchievementDialog.cpp  AchievementDialog.h  CompetitionModeDialog.cpp  CompetitionModeDialog.h  LeaderboardDialog.cpp  LeaderboardDialog.h  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.h  StyleLoader.h
ui/animation/: AnimationRenderer.cpp  AnimationRenderer.h  BombEffect.cpp  BombEffect.h  EliminateEffect.cpp  EliminateEffect.h  FallEffect.cpp  FallEffect.h  IAnimationEffect.h  SwapEffect.cpp  SwapEffect.h
ui/input/: IClickStrategy.h  InputHandler.cpp  InputHandler.h  NormalClickStrategy.cpp  NormalClickStrategy.h  PropClickStrategy.cpp  PropClickStrategy.h
ui/views/: AchievementNotificationWidget.cpp  AchievementNotificationWidget.h  AchievementView.cpp  AchievementView.h  GameView.cpp  GameView.h  MainMenuView.cpp  MainMenuView.h  RankView.cpp  RankView.h  ScoreFloatOverlay.cpp  ScoreFloatOverlay.h
ui/views/animation/: AnimationController.cpp  AnimationController.h  EliminationAnimationRenderer.cpp  EliminationAnimationRenderer.h  FallAnimationRenderer.cpp  FallAnimationRenderer.h  IAnimationRenderer.cpp  IAnimationRenderer.h  ScoreFloatRenderer.cpp  ScoreFloatRenderer.h  ShuffleAnimationRenderer.cpp  ShuffleAnimationRenderer.h  SnapshotManager.cpp  SnapshotManager.h  SwapAnimationRenderer.cpp  SwapAnimationRenderer.h
ui/widgets/: FruitWidget.cpp  FruitWidget.h  PropButton.cpp  PropButton.h  ScoreBoard.cpp  ScoreBoard.h
